# redwake

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  FAQ.md  GETTING_STARTED.md  INSTALL.md  LICENSE  Makefile  NOTICE  README.md  SECURITY.md  TROUBLESHOOTING.md  USAGE.md  install.sh  pyproject.toml  redwake-local.sh  redwake.spec
.github/: CODE_OF_CONDUCT.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  feature_request.yml  license_help.yml
.github/workflows/: build-release.yml  ci.yml.disabled  pentest.yml  publish-sandbox-image.yml  release.yml
benchmarks/: README.md
containers/: Dockerfile  docker-entrypoint.sh
docs/: README.md  contributing.mdx  docs.json  index.mdx  quickstart.mdx
docs/advanced/: configuration.mdx  skills.mdx
docs/cloud/: overview.mdx
docs/integrations/: ci-cd.mdx  github-actions.mdx
docs/llm-providers/: anthropic.mdx  azure.mdx  bedrock.mdx  local.mdx  novita.mdx  openai.mdx  openrouter.mdx  overview.mdx  vertex.mdx
docs/tools/: browser.mdx  overview.mdx  proxy.mdx  sandbox.mdx  terminal.mdx
docs/usage/: cli.mdx  instructions.mdx  scan-modes.mdx
redwake/agents/: factory.py  prompt.py
redwake/agents/prompts/: system_prompt.jinja
redwake/burp/: __init__.py  client.py  types.py
redwake/config/: __init__.py  loader.py  models.py  settings.py
redwake/core/: __init__.py  agents.py  execution.py  hooks.py  inputs.py  paths.py  runner.py  sessions.py
redwake/interface/: __init__.py  _notify.py  _save_report.py  cli.py  main.py  utils.py
redwake/interface/assets/: tui_styles.tcss
redwake/interface/tui/: __init__.py  app.py  history.py  live_view.py
redwake/interface/tui/renderers/: registry.py  todo_renderer.py
redwake/license/: __init__.py  _crypto.py  _obfuscate.py  anti_debug.py  discovery.py  exceptions.py  fingerprint.py  heartbeat.py  license.py
redwake/mcp/: __init__.py  server.py  tools.py
redwake/report/: __init__.py  compliance.py  dedupe.py  pdf.py  sarif.py  state.py  writer.py
redwake/runtime/: backends.py  caido_bootstrap.py  docker_client.py  session_manager.py
redwake/skills/: README.md  __init__.py
redwake/skills/custom/: source_aware_sast.md
redwake/skills/tooling/: python.md
redwake/skills/vulnerabilities/: prototype_pollution.md
redwake/telemetry/: README.md  _common.py  logging.py  posthog.py  scarf.py
redwake/tools/: __init__.py
redwake/tools/agent_browser/: README.md
redwake/tools/agents_graph/: tools.py
redwake/tools/apply_patch/: README.md
redwake/tools/finish/: tool.py
redwake/tools/load_skill/: tool.py
redwake/tools/notify/: __init__.py  tool.py
redwake/tools/proxy/: caido_api.py  tools.py
redwake/tools/reporting/: tool.py
redwake/tools/shell/: README.md
redwake/tools/todo/: tools.py
redwake/tools/view_image/: README.md
redwake/tools/web_search/: tool.py
redwake/utils/: resource_paths.py
rthooks/: rthook_redwake_antire.py
tests/: test_compliance.py  test_config_loader.py  test_cost_tracking.py  test_execution.py  test_hooks.py  test_inputs.py  test_local_sources.py  test_message_interrupt.py  test_notes.py  test_notify.py  test_runner_rate_limit.py  test_sarif.py  test_session_entries.py  test_state_repo_context.py
